--- a/app/index.html
+++ b/app/index.html
@@ -22,13 +22,52 @@
 				<div class="four columns">
 					<div class="logo-container">
 						<h5>Logo Goes Here</h5>
-					</div>				
+					</div>
 				</div>
 				<div class="eight columns">
 					<div class="tagline-container">
 						<h5>Tag Line Here</h5>
 					</div>
-				</div>	
+				</div>
+			</div>
+			<div class="row">
+				<div class="twelve columns">
+					<div class="navigaton">
+						<ul class="nav-bar">
+							<li class="nav-item active">
+								<a href="index.html">home</a>
+							</li>
+							<li class="has-flyout nav-item">
+								<a href="about.html">About</a>
+								<a href="about.html" class="flyout-toggle">
+									<span></span>
+								</a>
+								<ul class="flyout">
+									<li><a href="why.html">Why</a></li>
+									<li><a href="who.html">Who We Are</a></li>
+									<li><a href="schedule.html">Festival Schedule</a></li>
+								</ul>
+							</li>
+							<li class="has-flyout nav-item">
+								<a href="submit.html">Submit A Film</a>
+								<a href="submit.html" class="flyout-toggle">
+									<span></span>
+								</a>
+								<ul class="flyout">
+									<li><a href="instructions.html">Instructions</a></li>
+									<li><a href="upload.html">Upload</a></li>
+								</ul>
+							</li>
+						
+							<li class="nav-item">
+								<a href="partners.html">partners</a>
+							</li>
+							<li class="nav-item">
+								<a href="join.html">join us</a>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 
