Added nav bar pages

--- a/app/about.html
+++ b/app/about.html
@@ -8,11 +8,10 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
-
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF</title>
+		<title>GHFF-About</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -35,14 +34,14 @@
 				<div class="twelve columns">
 					<div class="navigaton">
 						<ul class="nav-bar">
-							<li class="nav-item active">
+							<li class="nav item">
 								<a href="index.html">Home</a>
 							</li>
-							<li class="has-flyout nav-item">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
+							<li class="has-flyout nav-item active">
+									<a href="about.html">About</a>
+									<a href="about.html" class="flyout-toggle">
+										<span></span>
+									</a>
 								<ul class="flyout">
 									<li><a href="why.html">Why</a></li>
 									<li><a href="who.html">Who We Are</a></li>
@@ -76,7 +75,7 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Home page</h1>
+						<h1>About</h1>
 					</div>
 				</div>
 			</div>			
