--- a/app/partners.html
+++ b/app/partners.html
@@ -8,11 +8,10 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
-
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF</title>
+		<title>GHFF-Partners</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -35,7 +34,7 @@
 				<div class="twelve columns">
 					<div class="navigaton">
 						<ul class="nav-bar">
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-flyout nav-item">
@@ -60,7 +59,7 @@
 								</ul>
 							</li>
 						
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a href="partners.html">Partners</a>
 							</li>
 							<li class="nav-item">
@@ -76,7 +75,7 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Home page</h1>
+						<h1>Partners</h1>
 					</div>
 				</div>
 			</div>			
