--- a/app/submit.html
+++ b/app/submit.html
@@ -8,11 +8,10 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
-
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF</title>
+		<title>GHFF-Submit</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -35,7 +34,7 @@
 				<div class="twelve columns">
 					<div class="navigaton">
 						<ul class="nav-bar">
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-flyout nav-item">
@@ -49,7 +48,7 @@
 									<li><a href="schedule.html">Festival Schedule</a></li>
 								</ul>
 							</li>
-							<li class="has-flyout nav-item">
+							<li class="has-flyout nav-item active">
 								<a href="submit.html">Submit A Film</a>
 								<a href="submit.html" class="flyout-toggle">
 									<span></span>
@@ -76,7 +75,7 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Home page</h1>
+						<h1>Submit your film!</h1>
 					</div>
 				</div>
 			</div>			
