--- a/app/join.html
+++ b/app/join.html
@@ -58,11 +58,10 @@
 									<li><a href="upload.html">Upload</a></li>
 								</ul>
 							</li>
-						
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a href="join.html">Join us</a>
 							</li>
 						</ul>
@@ -75,35 +74,11 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Partners</h1>
+						<h1>Join Us</h1>
 					</div>
 				</div>
 			</div>			
 		</div>
-		<div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
-  <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-</div>
-<div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
-  <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-</div>
-<div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
-  <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
