--- a/app/why.html
+++ b/app/why.html
@@ -11,7 +11,7 @@
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-Partners</title>
+		<title>GHFF-About</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -34,14 +34,14 @@
 				<div class="twelve columns">
 					<div class="navigaton">
 						<ul class="nav-bar">
-							<li class="nav-item">
+							<li class="nav item">
 								<a href="index.html">Home</a>
 							</li>
-							<li class="has-flyout nav-item">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
+							<li class="has-flyout nav-item active">
+									<a href="about.html">About</a>
+									<a href="about.html" class="flyout-toggle">
+										<span></span>
+									</a>
 								<ul class="flyout">
 									<li><a href="why.html">Why</a></li>
 									<li><a href="who.html">Who We Are</a></li>
@@ -59,7 +59,7 @@
 								</ul>
 							</li>
 						
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
 							<li class="nav-item">
@@ -75,33 +75,39 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Partners</h1>
+						<h1>Why we are here!</h1>
 					</div>
 				</div>
 			</div>			
 		</div>
-		<div class="row">
+	<div class="row">
   <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
+  	<div class="why-image">
+  	<img src="http://placehold.it/350x150&text=image+one">
+  </div>
   </div>
   <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </div>
 </div>
 <div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
   <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  	<p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </div>
+  <div class="four columns">
+  	<div class="why-image">
+  	<img src="http://placehold.it/350x150&text=image+two">
+  </div>
+</div>
 </div>
 <div class="row">
   <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
+  	<div class="why-image">
+  	<img src="http://placehold.it/350x150&text=image+three">
   </div>
+</div>
   <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </div>
 </div>
 
