Set padding + width/height to who + what pages

--- a/app/who.html
+++ b/app/who.html
@@ -91,27 +91,39 @@
 	</div>
 </div>
 <div class="row">
-  <div class="four columns">
+  <div class="three columns">
+  	<div class="who-image">
     <img src="http://placehold.it/200x150&text=image+one+here">
+    </div>
   </div>
-  <div class="eight columns">
+  <div class="nine columns">
+  	<div class="who-text">
     <p> This is the description of image one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </div>
   </div>
 </div>
 <div class="row">
-  <div class="four columns">
+  <div class="three columns">
+  	<div class="who-image">
     <img src="http://placehold.it/200x150&text=image+two+here">
+</div>
   </div>
-  <div class="eight columns">
+  <div class="nine columns">
+  	<div class="who-text">
     <p> This is the description of image two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </div>
   </div>
 </div>
 <div class="row">
-  <div class="four columns">
+  <div class="three columns">
+  	<div class="who-image">
     <img src="http://placehold.it/200x150&text=image+three+here">
   </div>
-  <div class="eight columns">
+</div>
+  <div class="nine columns">
+  	<div class="who-text">
     <p> This is the description of image three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  </div>
   </div>
 </div>
 <script src="javascripts/jquery.js"></script>
