--- a/app/why.html
+++ b/app/why.html
@@ -81,33 +81,39 @@
 			</div>			
 		</div>
 	<div class="row">
-  <div class="four columns">
+  <div class="three columns">
   	<div class="why-image">
   	<img src="http://placehold.it/350x150&text=image+one">
   </div>
   </div>
-  <div class="eight columns">
+  <div class="nine columns">
+  	<div class="why-text">
     <p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+</div>
   </div>
 </div>
 <div class="row">
-  <div class="eight columns">
+  <div class="nine columns">
+  	<div class="why-text">
   	<p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </div>
-  <div class="four columns">
+  </div>
+  <div class="three columns">
   	<div class="why-image">
   	<img src="http://placehold.it/350x150&text=image+two">
   </div>
 </div>
 </div>
 <div class="row">
-  <div class="four columns">
+  <div class="three columns">
   	<div class="why-image">
   	<img src="http://placehold.it/350x150&text=image+three">
   </div>
 </div>
-  <div class="eight columns">
+  <div class="nine columns">
+  	<div class="why-text">
     <p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </div>
   </div>
 </div>
 
