--- a/app/who.html
+++ b/app/who.html
@@ -9,125 +9,128 @@
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width" />
-<title>GHFF-About</title>
-<link rel="stylesheet" href="stylesheets/foundation.css">
-<link rel="stylesheet" href="stylesheets/app.css">
-<script src="javascripts/modernizr.foundation.js"></script>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>GHFF-About</title>
+		<link rel="stylesheet" href="stylesheets/foundation.css">
+		<link rel="stylesheet" href="stylesheets/app.css">
+		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-<div class="header">
-	<div class="row">
-		<div class="four columns">
-			<div class="logo-container">
-				<h5>Logo Goes Here</h5>
+		<div class="header">
+			<div class="row">
+				<div class="four columns">
+					<div class="logo-container">
+						<h5>Logo Goes Here</h5>
+					</div>
+				</div>
+				<div class="eight columns">
+					<div class="tagline-container">
+						<h5>Tag Line Here</h5>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div class="eight columns">
-			<div class="tagline-container">
-				<h5>Tag Line Here</h5>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="twelve columns">
-			<div class="navigaton">
-				<ul class="nav-bar">
-					<li class="nav item">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="has-flyout nav-item active">
-						<a href="about.html">About</a>
-						<a href="about.html" class="flyout-toggle">
-							<span></span>
-						</a>
-						<ul class="flyout">
-							<li>
-								<a href="why.html">Why</a>
+			<div class="row">
+				<div class="twelve columns">
+					<div class="navigaton">
+						<ul class="nav-bar">
+							<li class="nav item">
+								<a href="index.html">Home</a>
 							</li>
-							<li>
-								<a href="who.html">Who We Are</a>
+							<li class="has-flyout nav-item active">
+								<a href="about.html">About</a>
+								<a href="about.html" class="flyout-toggle">
+									<span></span>
+								</a>
+								<ul class="flyout">
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
+								</ul>
 							</li>
-							<li>
-								<a href="schedule.html">Festival Schedule</a>
+							<li class="has-flyout nav-item">
+								<a href="submit.html">Submit A Film</a>
+								<a href="submit.html" class="flyout-toggle">
+									<span></span>
+								</a>
+								<ul class="flyout">
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
+								</ul>
+							</li>
+
+							<li class="nav-item">
+								<a href="partners.html">Partners</a>
+							</li>
+							<li class="nav-item">
+								<a href="join.html">Join us</a>
 							</li>
 						</ul>
-					</li>
-					<li class="has-flyout nav-item">
-						<a href="submit.html">Submit A Film</a>
-						<a href="submit.html" class="flyout-toggle">
-							<span></span>
-						</a>
-						<ul class="flyout">
-							<li>
-								<a href="instructions.html">Instructions</a>
-							</li>
-							<li>
-								<a href="upload.html">Upload</a>
-							</li>
-						</ul>
-					</li>
-
-					<li class="nav-item">
-						<a href="partners.html">Partners</a>
-					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
-					</li>
-				</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>
 
-<div class="content-container">
-	<div class="row">
-		<div class="twelve columns">
-			<div class="content">
-				<h1>Who We Are</h1>
+		<div class="content-container">
+			<div class="row">
+				<div class="twelve columns">
+					<div class="content">
+						<h1>Who We Are</h1>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>
-<div class="row">
-  <div class="three columns">
-  	<div class="who-image">
-    <img src="http://placehold.it/200x150&text=image+one+here">
-    </div>
-  </div>
-  <div class="nine columns">
-  	<div class="who-text">
-    <p> This is the description of image one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="three columns">
-  	<div class="who-image">
-    <img src="http://placehold.it/200x150&text=image+two+here">
-</div>
-  </div>
-  <div class="nine columns">
-  	<div class="who-text">
-    <p> This is the description of image two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="three columns">
-  	<div class="who-image">
-    <img src="http://placehold.it/200x150&text=image+three+here">
-  </div>
-</div>
-  <div class="nine columns">
-  	<div class="who-text">
-    <p> This is the description of image three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-  </div>
-</div>
-<script src="javascripts/jquery.js"></script>
-<script src="javascripts/foundation.min.js"></script>
-<script src="javascripts/app.js"></script>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="who-image">
+					<img src="http://placehold.it/200x150&text=image+one+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="who-text">
+					<p>
+						This is the description of image one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="who-image">
+					<img src="http://placehold.it/200x150&text=image+two+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="who-text">
+					<p>
+						This is the description of image two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="who-image">
+					<img src="http://placehold.it/200x150&text=image+three+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="who-text">
+					<p>
+						This is the description of image three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
