--- a/app/partners.html
+++ b/app/partners.html
@@ -80,30 +80,45 @@
 				</div>
 			</div>			
 		</div>
-		<div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
-  <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-</div>
-<div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
-  <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-</div>
-<div class="row">
-  <div class="four columns">
-    <img src="http://placehold.it/200x150&text=partner+image">
-  </div>
-  <div class="eight columns">
-    <p> This is the description of partner image.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-</div>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="partner-image">
+					<img src="http://placehold.it/200x150&text=image+one+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="partner-text">
+					<p>
+						This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="partner-image">
+					<img src="http://placehold.it/200x150&text=image+two+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="partner-text">
+					<p>
+						This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="partner-image">
+					<img src="http://placehold.it/200x150&text=image+three+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="who-text">
+					<p>
+						This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
