--- a/app/why.html
+++ b/app/why.html
@@ -75,48 +75,62 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Why we are here!</h1>
+						<h4>Why we are here!</h4>
 					</div>
 				</div>
 			</div>			
 		</div>
-	<div class="row">
-  <div class="three columns">
-  	<div class="why-image">
-  	<img src="http://placehold.it/350x150&text=image+one">
-  </div>
-  </div>
-  <div class="nine columns">
-  	<div class="why-text">
-    <p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-</div>
-  </div>
+<div class="row vert-pad">
+	<div class="eleven columns centered">
+		<p>Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
+The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:</p>
+	</div>
 </div>
 <div class="row">
-  <div class="nine columns">
-  	<div class="why-text">
-  	<p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </div>
-  </div>
-  <div class="three columns">
-  	<div class="why-image">
-  	<img src="http://placehold.it/350x150&text=image+two">
-  </div>
+	<div class="one columns"></div>
+	<div class="ten columns">
+		<p>Safe, effective surgery globally</p>
+		<p>
+			Did you know XX% of the world die or are disabled due to lack of access to surgery
+		</p>
+	</div>
+	<div class="one columns"></div>
 </div>
+<div class="row vert-pad">
+	<div class="one columns"></div>
+	<div class="ten columns">
+		<p>Safe, clean and effective hospital systems</p>
+		<p>
+			Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
+		</p>
+	</div>
+	<div class="one columns"></div>
 </div>
 <div class="row">
-  <div class="three columns">
-  	<div class="why-image">
-  	<img src="http://placehold.it/350x150&text=image+three">
-  </div>
+	<div class="one columns"></div>
+	<div class="ten columns">
+		<p>Access to rehabilitation and therapy</p>
+		<p>
+			Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
+		</p>
+	</div>
+	<div class="one columns"></div>
 </div>
-  <div class="nine columns">
-  	<div class="why-text">
-    <p>text goes here with hyperlink. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-  </div>
+<div class="row vert-pad">
+	<div class="one columns"></div>
+	<div class="ten columns">
+		<p>Public policy and resource allocation for surgical systems</p>
+		<p>
+			Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
+		</p>
+	</div>
+	<div class="one columns"></div>
 </div>
-
+<div class="row">
+	<div class="eleven columns centered">
+		<p>Want to learn more and help us advocate for the festival?  Join our petition: hyperlink</p>
+	</div>
+</div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
