Updated Who and placeholder for schedule

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -80,7 +80,14 @@
 				</div>
 			</div>			
 		</div>
-
+<div class="row">
+  <div class="eleven columns centered">
+    <p>When: Saturday July 6, 2013</p>
+    <p>Where: TBD</p>
+    <p>Time: 7pm-10pm</p>
+    <p>RSVP on Facebook here!</p>
+  </div>
+</div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
