--- a/app/who.html
+++ b/app/who.html
@@ -85,7 +85,7 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Who We Are</h1>
+						<h4>Who We Are</h4>
 					</div>
 				</div>
 			</div>
@@ -98,12 +98,12 @@
 			<div class="nine columns">
 				<div class="who-text">
 					<p>
-						This is the description of image one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						Amber Caldwell.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
 				</div>
 			</div>
 		</div>
-		<div class="row vert-pad">
+		<div class="row">
 			<div class="three columns">
 				<div class="who-image">
 					<img src="http://placehold.it/200x150&text=image+two+here"></div>
@@ -111,7 +111,7 @@
 			<div class="nine columns">
 				<div class="who-text">
 					<p>
-						This is the description of image two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						Jaymie Henry-Ang.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
 				</div>
 			</div>
@@ -124,7 +124,20 @@
 			<div class="nine columns">
 				<div class="who-text">
 					<p>
-						This is the description of image three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						Andrew Pedtke, MD.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="three columns">
+				<div class="who-image">
+					<img src="http://placehold.it/200x150&text=image+three+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="who-text">
+					<p>
+						Stephanie Tomasky.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
 				</div>
 			</div>
