styled left side of "submit" page

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -51,17 +51,17 @@
 			</div>
 		</div>
 		<div class="body row">
-			<div class="twelve columns">
-			<div class="twelve columns">
-				<div class="content">
-					<div>
-						<h5>Saturday July 6, 2013</h5>
-						<h5>Location TBD</h5>
-						<h5>7pm-10pm, with live performance by XX after premier</h5>
-						<h5>RSVP on Facebook here!</h5>
+			<div class="twelve columns content-container">
+				<div class="row">
+					<div class="twelve columns">
+						<div>
+							<h5>Saturday July 6, 2013</h5>
+							<h5>Location TBD</h5>
+							<h5>7pm-10pm, with live performance by XX after premier</h5>
+							<h5>RSVP on Facebook here!</h5>
+						</div>
 					</div>
 				</div>
-			</div>
 			<div class="twelve columns">
 				<h4>Feature Film</h4>
 			</div>
