--- a/app/about.html
+++ b/app/about.html
@@ -69,6 +69,17 @@
 			<a href="partners.html">Partners</a>
 		</div>
 	</div>
+	<div class="twelve columns">
+		<p>
+							<span class="strong">About the Global Health Film Festival: The Right To Heal</span>
+						</p>
+						<p>
+							The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. The festival aims to highlight the various issues surrounding healthcare, or the lack thereof, in the world. The particular focus of this festival is on the provision of surgical care in developing countries and how people in parts of the world live their lives unable to heal from surgical conditions they were born with, accidents that have happened, or from surgical complications of childbirth.
+						</p>
+						<p>
+							We will focus our lenses on this topic and discuss them in depth. There will be a panel session after the festival exploring these issues.
+						</p>
+	</div>
 </div>
 	<div class="footer row">
 		<div class="twelve columns">
