added photo "who"

--- a/app/who.html
+++ b/app/who.html
@@ -151,7 +151,7 @@
 				<div class="row">
 					<div class="three columns">
 							<div class="partner-image">
-								<img alt="" src="who_6_1852985413.png" width="200" height="150"/>
+								<img alt="" src="who_6_1852985413.JPG" width="200" height="150"/>
 							</div>
 					</div>
 					<div class="nine columns">
